# QB_Terms_Query_Homework

./: README.md  pyproject.toml  response.xml  terms.py
